deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/cloudnative-mvp1/mvp_frontend:v3
        imagePullPolicy: Always
        #image: shclub/edu12-3:v11
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: frontend-secret
