route.yaml
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   name: frontend-mvp-test
#   #namespace: mvp
# spec:
#   host: frontend-mvp-test.apps.211-34-231-93.nip.io
#   to:
#     kind: Service
#     name: frontend
#     weight: 100
#   port:
#     targetPort: http
#   tls:
#     termination: edge
#     insecureEdgeTerminationPolicy: Redirect
#   wildcardPolicy: None

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: frontend-mvp-test.apps.211-34-231-93.nip.io
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100    
  wildcardPolicy: None
